force-app/main/default/objects/PARRetryPolicy__mdt/PARRetryPolicy__mdt.object-meta.xml
<CustomObject>
    <label>PARRetryPolicy</label>
    <pluralLabel>PARRetryPolicy</pluralLabel>
</CustomObject>