force-app/main/default/objects/PARRetryPolicy__mdt/fields/DeadStatus__c.field-meta.xml
<CustomField>
    <fullName>DeadStatus__c</fullName>
    <label>DeadStatus</label>
    <length>40</length>
    <type>Text</type>
</CustomField>