force-app/main/default/objects/PARRetryPolicy__mdt/fields/RetryIntervalMinutes__c.field-meta.xml
<CustomField>
    <fullName>RetryIntervalMinutes__c</fullName>
    <label>RetryIntervalMinutes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>